Blogs Section added

--- a/index.html
+++ b/index.html
@@ -449,18 +449,92 @@
     <div class="appoinment-section row w-100">
         <div class="as-img col-lg-6 col-12"></div>
         <div class="as-cont col-lg-6 col-12 px-5 d-flex flex-column justify-content-center align-items-start gap-4">
-            <h1 class="text-white fw-bold">Book an<br/>Appoinment</h1>
-            <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Patient Name" aria-label="Patient Name" aria-describedby="basic-addon2">
+            <h1 class="text-white fw-bold">Book an<br />Appoinment</h1>
+            <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle"
+                placeholder="Patient Name" aria-label="Patient Name" aria-describedby="basic-addon2">
             <div class="input-group gap-4 flex-wrap">
-                <input type="number" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Phone" aria-label="Phone" aria-describedby="basic-addon2">
-                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Email address" aria-label="Email address" aria-describedby="basic-addon2">
+                <input type="number" class="form-control bg-transparent rounded-0 border-secondary-subtle"
+                    placeholder="Phone" aria-label="Phone" aria-describedby="basic-addon2">
+                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle"
+                    placeholder="Email address" aria-label="Email address" aria-describedby="basic-addon2">
             </div>
             <div class="input-group gap-4 flex-wrap">
-                <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Date of birth" aria-label="Date of birth" aria-describedby="basic-addon2">
-                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle" placeholder="Appointment date" aria-label="Appointment date" aria-describedby="basic-addon2">
+                <input type="text" class="form-control bg-transparent rounded-0 border-secondary-subtle"
+                    placeholder="Date of birth" aria-label="Date of birth" aria-describedby="basic-addon2">
+                <input type="email" class="form-control bg-transparent rounded-0 border-secondary-subtle"
+                    placeholder="Appointment date" aria-label="Appointment date" aria-describedby="basic-addon2">
             </div>
-            <textarea class="form-control bg-transparent rounded-0 border-secondary-subtle" aria-label="message" placeholder="Message"></textarea>
-            <button class="btn text-uppercase z-1 text-white rounded-0 px-4 py-2 small fw-medium align-self-end small fw-semibold">Confirm Booking</button>
+            <textarea class="form-control bg-transparent rounded-0 border-secondary-subtle" aria-label="message"
+                placeholder="Message"></textarea>
+            <button
+                class="btn text-uppercase z-1 text-white rounded-0 px-4 py-2 small fw-medium align-self-end small fw-semibold">Confirm
+                Booking</button>
+        </div>
+    </div>
+
+    <div class="blog-section container">
+        <div class="blog-head text-center">
+            <h1 class="fw-bold">Latest From Our Blog</h1>
+            <p class="text-body-tertiary small w-50 mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="blog-body mt-5 d-flex gap-4 flex-lg-nowrap flex-wrap">
+            <div class="card rounded-0 border-0 gap-3" style="width: 18rem;">
+                <div class="blog-img w-100">
+                    <img src="assests/images/blogs/blog-1.png" alt="">
+                </div>
+                <div class="card-body">
+                    <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
+                    <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                </div>
+                <div class="reach d-flex justify-content-between px-3">
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-comment"></i> 02 Comments</span>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0 gap-3" style="width: 18rem;">
+                <div class="blog-img w-100">
+                    <img src="assests/images/blogs/blog-2.png" alt="">
+                </div>
+                <div class="card-body">
+                    <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
+                    <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                </div>
+                <div class="reach d-flex justify-content-between px-3">
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-comment"></i> 02 Comments</span>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0 gap-3" style="width: 18rem;">
+                <div class="blog-img w-100">
+                    <img src="assests/images/blogs/blog-3.png" alt="">
+                </div>
+                <div class="card-body">
+                    <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
+                    <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                </div>
+                <div class="reach d-flex justify-content-between px-3">
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-comment"></i> 02 Comments</span>
+                </div>
+            </div>
+            <div class="card rounded-0 border-0 gap-3" style="width: 18rem;">
+                <div class="blog-img w-100">
+                    <img src="assests/images/blogs/blog-4.png" alt="">
+                </div>
+                <div class="card-body">
+                    <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
+                    <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                </div>
+                <div class="reach d-flex justify-content-between px-3">
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
+                    <span class="small text-body-tertiary"><i class="fa-regular fa-comment"></i> 02 Comments</span>
+                </div>
+            </div>
         </div>
     </div>
 
