--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <p class="text-body-tertiary small w-50 mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
-        <div class="blog-body mt-5 d-flex gap-4 flex-lg-nowrap flex-wrap">
+        <div class="blog-body mt-5 d-flex gap-4 justify-content-center align-items-center flex-lg-nowrap flex-wrap">
             <div class="card rounded-0 border-0 gap-3" style="width: 18rem;">
                 <div class="blog-img w-100">
                     <img src="assests/images/blogs/blog-1.png" alt="">
@@ -486,7 +486,8 @@
                 <div class="card-body">
                     <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
                     <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
-                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet,
+                        consectetur.</p>
                 </div>
                 <div class="reach d-flex justify-content-between px-3">
                     <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
@@ -500,7 +501,8 @@
                 <div class="card-body">
                     <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
                     <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
-                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet,
+                        consectetur.</p>
                 </div>
                 <div class="reach d-flex justify-content-between px-3">
                     <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
@@ -514,7 +516,8 @@
                 <div class="card-body">
                     <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
                     <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
-                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet,
+                        consectetur.</p>
                 </div>
                 <div class="reach d-flex justify-content-between px-3">
                     <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
@@ -528,7 +531,8 @@
                 <div class="card-body">
                     <span class="text-secondary small bg-black px-3 py-1">10 Jan 2018</span>
                     <h5 class="card-title fw-bold mt-3">Addiction When Gambling Becomes A Problem</h5>
-                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <p class="card-text small text-body-tertiary">inappropriate behavior ipsum dolor sit amet,
+                        consectetur.</p>
                 </div>
                 <div class="reach d-flex justify-content-between px-3">
                     <span class="small text-body-tertiary"><i class="fa-regular fa-heart"></i> 15 Likes</span>
@@ -537,6 +541,36 @@
             </div>
         </div>
     </div>
+
+    <footer class="d-flex flex-column gap-5">
+        <div class="upper-footer row d-flex flex-column gap-4">
+            <div class="col-lg-2 col-12 d-flex flex-column gap-2 justify-content-start align-items-start">
+                <h5 class="text-white fw-bold">Top Products</h5>
+                <a href="#" class="text-white small text-decoration-none">Managed Website</a>
+                <a href="#" class="text-white small text-decoration-none">Manage Reputation</a>
+                <a href="#" class="text-white small text-decoration-none">Power Tools</a>
+                <a href="#" class="text-white small text-decoration-none">Marketing Service</a>
+            </div>
+            <div class="col-lg-4 col-12 d-flex flex-column gap-2 justify-content-start align-items-start">
+                <h5 class="text-white fw-bold">Contact Us</h5>
+                <p class="small text-white">56/8, bir uttam qazi nuruzzaman road, west panthapath, kalabagan, Dhanmondi,
+                    Dhaka - 1205</p>
+                <h4 class="m-0 fw-bold">012-6532-568-9746</h4>
+                <h4 class="m-0 fw-bold">012-6532-568-97468</h4>
+            </div>
+            <div class="col-lg-6 col-12">
+                <h5 class="text-white fw-bold">Newsletter</h5>
+                <p class="small text-white m-0">You can trust us. we only send promo offers, not a single spam.</p>
+                <input type="email" name="Email address" id="Email address" placeholder="Your Email Address" class="rounded-pill mt-3 px-3 py-2 border-0 me-3">
+                <button
+                class="text rounded-pill z-1 mt-3 text-white rounded-0 px-4 py-2 small fw-medium align-self-end small fw-semibold">Subscribe <i class="fa-solid fa-arrow-right-long position-relative"></i></button>
+            </div>
+        </div>
+        <div class="lower-footer d-flex justify-content-between">
+            <span class="text-white">Copyright &copy;2025 All rights reserved | This template is made with <i
+                    class="fa-regular fa-heart"></i> by <a href="#" class="text-decoration-none">Colorlib</a></span>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
